--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="toolbar">#93c4d4</color>
+    <color name="txt">#244a60</color>
+    <color name="txt_sub">#4a87a1</color>
 </resources>
