--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -1,23 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="wrap_content"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="horizontal">
-    
-    <ImageView
-        android:id="@+id/file_name"
-        android:layout_gravity="center"
-        android:layout_height="38dp"
-        android:layout_marginLeft="10dp"
-        android:layout_width="38dp"/>
-    
-    <TextView
-        android:id="@+id/path_name"
-        android:layout_height="50dp"
-        android:layout_marginLeft="10dp"
-        android:layout_weight="2"
-        android:layout_width="0dp"
-        android:textSize="18sp"/>
-    
-</LinearLayout>
+    android:layout_height="80dp"
+    android:orientation="horizontal"
+    app:cardBackgroundColor="@color/purple_100"
+    app:cardCornerRadius="15dp"
+    app:cardElevation="4dp"
+    app:cardUseCompatPadding="true">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            app:cardBackgroundColor="@color/purple_50"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="0dp">
+
+            <ImageView
+                android:id="@+id/file_name"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                tools:ignore="RtlHardcoded" />
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/path_name"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_marginStart="70dp"
+            android:layout_marginTop="6dp"
+            android:textSize="15sp" />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="320dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="0dp">
+
+            <net.qiujuer.genius.ui.widget.Button
+                android:id="@+id/button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clickable="true"
+                app:gTouchEffect="ripple"
+                android:gravity="center"
+                android:text="@string/settings"
+                android:background="@color/purple_50"/>
+        </androidx.cardview.widget.CardView>
+
+
+    </RelativeLayout>
+</androidx.cardview.widget.CardView>
