--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,17 +2,14 @@
     <!-- Base application theme. -->
     <style name="Theme.MCEngine" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="colorPrimary">@color/雪青</item>
+        <item name="colorPrimaryDark">@color/紫罗兰</item>
+        <item name="android:statusBarColor">@color/紫罗兰</item>
     </style>
     <!-- Base application theme. -->
     <style name="Base.Theme.MCEngine" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/雪青</item>
+        <item name="colorPrimaryDark">@color/紫罗兰</item>
+        <item name="android:statusBarColor">@color/紫罗兰</item>
     </style>
 </resources>
