--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -3,54 +3,57 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="100dp"
     android:orientation="horizontal"
     app:cardBackgroundColor="@color/purple_100"
-    app:cardCornerRadius="15dp"
+    app:cardCornerRadius="10dp"
     app:cardElevation="4dp"
     app:cardUseCompatPadding="true">
 
     <RelativeLayout
+        android:id="@+id/rl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/rl"
+        android:elevation="10dp"
         android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
             android:id="@+id/card1"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="0dp"
             app:cardBackgroundColor="@color/purple_50"
-            app:cardCornerRadius="20dp"
+            app:cardCornerRadius="10dp"
             app:cardElevation="0dp">
 
             <ImageView
                 android:id="@+id/file_name"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 tools:ignore="RtlHardcoded" />
         </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/path_name"
             android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_marginStart="70dp"
-            android:layout_marginTop="6dp"
-            android:textSize="15sp" />
+            android:layout_height="25dp"
+            android:layout_marginStart="90dp"
+            android:layout_marginTop="10dp"
+            android:textSize="20sp" />
 
         <androidx.cardview.widget.CardView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="8dp"
-            app:cardCornerRadius="20dp"
+            app:cardCornerRadius="25dp"
             app:cardElevation="0dp">
 
             <net.qiujuer.genius.ui.widget.Button
@@ -59,8 +62,9 @@
                 android:layout_height="match_parent"
                 android:background="@color/purple_50"
                 android:clickable="true"
+                android:foreground="@drawable/a_gear"
                 android:gravity="center"
-                android:text="@string/settings"
+                android:text=""
                 app:gTouchEffect="ripple" />
         </androidx.cardview.widget.CardView>
 
