--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,13 +33,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="50dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginBottom="50dp"
-        android:clickable="true"
-        app:srcCompat="@android:drawable/ic_input_add"
         android:background="@color/purple_50"
+        android:clickable="true"
         android:focusable="true"
-        android:importantForAccessibility="no" />
+        android:importantForAccessibility="no"
+        app:srcCompat="@android:drawable/ic_input_add" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton2"
@@ -47,13 +47,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="50dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginBottom="120dp"
+        android:background="@color/purple_50"
         android:clickable="true"
         android:focusable="true"
-        android:background="@color/purple_50"
-        app:srcCompat="@android:drawable/ic_media_play"
-        android:importantForAccessibility="no" />
+        android:importantForAccessibility="no"
+        app:srcCompat="@android:drawable/ic_media_play" />
 
     <ListView
         android:id="@+id/modList"
