--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -6,119 +6,143 @@
     android:layout_height="match_parent"
     tools:context=".AboutActivity">
 
-    <RelativeLayout
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/about_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="-16dp"
-        tools:layout_editor_absoluteY="-16dp"
-        android:background="@color/blue_50">
+        android:layout_height="wrap_content"
+        android:background="@color/blue_100"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:menu="@menu/menu_about"
+        app:title="@string/about"
+        tools:layout_editor_absoluteX="-50dp"
+        tools:layout_editor_absoluteY="2dp"
+        tools:ignore="MissingConstraints" />
 
-        <TextView
-            android:id="@+id/about_app"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="350dp"
-            android:gravity="center"
-            android:text="@string/app_name"
-            android:textSize="20sp" />
+    <ImageView
+        android:id="@+id/about_app_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        android:src="@mipmap/ic_launcher_round"
+        app:layout_constraintBottom_toTopOf="@+id/about_app"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/about_toolbar"
+        app:layout_constraintVertical_bias="0.26" />
 
-        <TextView
-            android:id="@+id/about_app_front"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="380dp"
-            android:layout_marginEnd="50dp"
-            android:gravity="center"
-            android:text="@string/about_app_front"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
-            android:textSize="9sp"
-            tools:ignore="SmallSp" />
+    <TextView
+        android:id="@+id/about_app"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:text="@string/app_name"
+        android:textSize="20sp"
+        app:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toTopOf="@+id/about_app_front"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <ImageView
-            android:id="@+id/about_app_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="250dp"
-            android:src="@mipmap/ic_launcher_round" />
+    <TextView
+        android:id="@+id/about_app_front"
+        android:layout_width="324dp"
+        android:layout_height="67dp"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:text="@string/about_app_front"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+        android:textSize="9sp"
+        app:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toTopOf="@+id/about_github_Android"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="SmallSp" />
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/about_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/blue_100"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme"
-            app:menu="@menu/menu_about"
-            app:title="@string/about" />
+    <TextView
+        android:id="@+id/about_github_Android"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:text="@string/about_github_Android"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+        android:textSize="12sp"
+        app:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toTopOf="@+id/about_github_LSPosed"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/about_github_Android"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/about_app_front"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="50dp"
-            android:layout_marginBottom="-70dp"
-            android:gravity="center"
-            android:text="@string/about_github_Android"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
-            android:textSize="12sp" />
+    <TextView
+        android:id="@+id/about_github_LSPosed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:text="@string/about_github_LSPosed"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+        android:textSize="12sp"
+        app:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toTopOf="@+id/about_github_Dobby"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/about_github_LSPosed"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/about_app_front"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="50dp"
-            android:layout_marginBottom="-140dp"
-            android:gravity="center"
-            android:text="@string/about_github_LSPosed"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
-            android:textSize="12sp" />
+    <TextView
+        android:id="@+id/about_github_Dobby"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:text="@string/about_github_Dobby"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+        android:textSize="12sp"
+        app:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toTopOf="@+id/about_github_miniz"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/about_github_Dobby"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/about_app_front"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="50dp"
-            android:layout_marginBottom="-210dp"
-            android:gravity="center"
-            android:text="@string/about_github_Dobby"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
-            android:textSize="12sp" />
+    <TextView
+        android:id="@+id/about_github_miniz"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:text="@string/about_github_miniz"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+        android:textSize="12sp"
+        app:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toTopOf="@+id/about_github_quickjs_android"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/about_github_miniz"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/about_app_front"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="50dp"
-            android:layout_marginBottom="-280dp"
-            android:gravity="center"
-            android:text="@string/about_github_miniz"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
-            android:textSize="12sp" />
-        <TextView
-            android:id="@+id/about_thanks"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/about_app_front"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="50dp"
-            android:layout_marginBottom="-350dp"
-            android:gravity="center"
-            android:text="@string/about_thanks"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
-            android:textSize="9sp"
-            tools:ignore="SmallSp" />
+    <TextView
+        android:id="@+id/about_github_quickjs_android"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:text="@string/about_github_quickjs_android"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+        android:textSize="12sp"
+        app:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toTopOf="@+id/about_thanks"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    </RelativeLayout>
+    <TextView
+        android:id="@+id/about_thanks"
+        android:layout_width="163dp"
+        android:layout_height="54dp"
+        android:gravity="center"
+        android:text="@string/about_thanks"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+        android:textSize="9sp"
+        app:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/about_toolbar"
+        app:layout_constraintVertical_bias="0.94"
+        tools:ignore="SmallSp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
